--- a/public/index.html
+++ b/public/index.html
@@ -494,6 +494,15 @@
           </div>
           <div id="appsList" class="grid grid-cols-1 gap-4"></div>
         </div>
+
+        <!-- App Detail Page (hidden by default) -->
+        <div
+          id="appDetailPage"
+          class="hidden w-full h-full px-10 py-8 bg-gray-50 overflow-auto"
+        >
+          <!-- Content will be rendered by JavaScript -->
+        </div>
+
         <div id="tab-profile" class="tab-content w-full px-10 py-6 hidden">
           <!-- Profile tab is empty for now -->
         </div>
