add user and admin roles

--- a/public/index.html
+++ b/public/index.html
@@ -226,6 +226,12 @@
                   >
                     admin@example.com
                   </p>
+                  <span
+                    id="userRoleBadge"
+                    class="inline-block mt-1 px-2 py-0.5 text-xs font-medium rounded-full bg-gray-100 text-gray-600"
+                  >
+                    user
+                  </span>
                 </div>
                 <div class="py-1">
                   <button
