--- a/public/index.html
+++ b/public/index.html
@@ -1041,7 +1041,7 @@
             ></video>
             <img
               id="featureDetailPhoto"
-              style="display:none; width:100%; max-height:300px"
+              style="display:none; max-width:100%; height:auto"
               class="mb-2 rounded"
             />
             <!-- Feature video generation section -->
