--- a/public/index.html
+++ b/public/index.html
@@ -1199,6 +1199,8 @@
                   <option value="kling-v2-master-image-to-video">Kling v2 Master Image2Video</option>
                   <option value="kling-v2.1-standard-image-to-video">Kling v2.1 Standard Image2Video</option>
                   <option value="kling-v2.1-pro-image-to-video">Kling v2.1 Pro Image2Video</option>
+                  <option value="kling-2.5-turbo-pro-image-to-video">Kling 2.5 Turbo Pro Image2Video</option>
+                  <option value="kling-2.5-turbo-pro">Kling 2.5 Turbo Pro Text2Video</option>
                   <option value="civitai:136070@267493">ControlNet XL Video (Runware)</option>
                   <option value="civitai:855822@957548">Claymotion F1 (Runware)</option>
                 </select>
