--- a/public/index.html
+++ b/public/index.html
@@ -1240,6 +1240,7 @@
                   <option value="kling-v2.1-pro-image-to-video">Kling v2.1 Pro Image2Video</option>
                   <option value="kling-2.5-turbo-pro-image-to-video">Kling 2.5 Turbo Pro Image2Video</option>
                   <option value="kling-2.5-turbo-pro">Kling 2.5 Turbo Pro Text2Video</option>
+                  <option value="wan-2.5-image-to-video">Wan 2.5 Image2Video</option>
                 </select>
                 <!-- Pixverse last frame uploader (hidden unless Pixverse model chosen) -->
                 <div id="featureLastFrameWrapper" style="display:none" class="flex items-center gap-2">
@@ -1288,6 +1289,7 @@
                     Resolution
                     <select id="modelResolutionSelect" class="mt-1 border rounded px-2 py-2 text-sm">
                       <option value="">Default</option>
+                      <option value="280p">280p</option>
                       <option value="360p">360p (640x360)</option>
                       <option value="540p">540p (960x540)</option>
                       <option value="720p">720p (1280x720)</option>
