--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,14 @@
               <button
                 onclick="switchTab('templates')"
                 class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100 w-full text-left"
-                ><i class="fa fa-layer-group mr-3"></i>Templates</button
+                ><i class="fa fa-layer-group mr-3"></i>Video Templates</button
+              >
+            </li>
+            <li id="nav-photo-templates">
+              <button
+                onclick="switchTab('photo-templates')"
+                class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100 w-full text-left"
+                ><i class="fa fa-images mr-3"></i>Photo Templates</button
               >
             </li>
             <li>
@@ -555,7 +562,7 @@
         </div>
         <div id="tab-templates" class="tab-content w-full px-10 py-6 hidden">
           <div class="flex items-center justify-between mb-4">
-            <h2 class="text-2xl font-bold text-gray-800">Templates</h2>
+            <h2 class="text-2xl font-bold text-gray-800">Video Templates</h2>
             <div class="flex gap-2">
               <input
                 id="templateSearch"
@@ -573,6 +580,29 @@
           </div>
           <div
             id="templatesGrid"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
+          ></div>
+        </div>
+        <div id="tab-photo-templates" class="tab-content w-full px-10 py-6 hidden">
+          <div class="flex items-center justify-between mb-4">
+            <h2 class="text-2xl font-bold text-gray-800">Photo Templates</h2>
+            <div class="flex gap-2">
+              <input
+                id="photoTemplateSearch"
+                type="text"
+                placeholder="Search photo templates..."
+                class="border border-gray-300 rounded-lg px-3 py-2 w-64 focus:outline-none focus:ring-2 focus:ring-blue-400"
+              />
+              <button
+                id="addPhotoTemplateBtn"
+                class="ml-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center"
+              >
+                <i class="fa fa-plus mr-2"></i>Add Photo Template
+              </button>
+            </div>
+          </div>
+          <div
+            id="photoTemplatesGrid"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
           ></div>
         </div>
