--- a/public/index.html
+++ b/public/index.html
@@ -596,6 +596,7 @@
               <button
                 id="addPhotoTemplateBtn"
                 class="ml-2 px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 flex items-center"
+                onclick="openPhotoTemplateModal()"
               >
                 <i class="fa fa-plus mr-2"></i>Add Photo Template
               </button>
@@ -1099,6 +1100,7 @@
             </form>
           </div>
         </div>
+
         <!-- Feature Detail Page (hidden by default) -->
         <div
           id="featureDetailPage"
@@ -2143,6 +2145,71 @@
             </button>
           </div>
         </form>
+      </div>
+    </div>
+
+    <!-- Photo Template Creation Modal (at body level for proper z-index) -->
+    <div
+      id="createPhotoTemplateModal"
+      class="fixed inset-0 z-50 flex flex-col bg-white transition-all duration-300 ease-in-out overflow-auto"
+      style="display: none; min-height: 100vh; min-width: 100vw;"
+    >
+      <div class="w-full flex justify-end p-6">
+        <button
+          onclick="closePhotoTemplateModal()"
+          class="text-gray-400 hover:text-gray-700 text-2xl focus:outline-none"
+          aria-label="Close"
+        >
+          <i class="fa fa-times"></i>
+        </button>
+      </div>
+      <div class="flex flex-col items-center justify-center flex-1 w-full px-4 pb-10">
+        <div class="w-full max-w-2xl bg-white rounded-2xl shadow-xl p-10 border border-gray-100">
+          <h2 id="photoTemplateModalTitle" class="text-3xl font-bold mb-8 text-center text-blue-700">Create New Photo Template</h2>
+          <form id="createPhotoTemplateForm" class="space-y-6">
+            <div>
+              <label class="block text-gray-700 font-semibold mb-1">Template Name (Main Category)</label>
+              <input
+                id="photoTemplateName"
+                type="text"
+                class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
+                required
+              />
+            </div>
+            <div>
+              <label class="block text-gray-700 font-semibold mb-1">Description</label>
+              <textarea
+                id="photoTemplateDescription"
+                class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
+              ></textarea>
+            </div>
+            <div>
+              <label class="block text-gray-700 font-semibold mb-1">Subcategories</label>
+              <div id="photoSubcategoriesContainer" class="space-y-4"></div>
+              <div class="flex gap-2 mt-2">
+                <input id="newPhotoSubcategoryInput" type="text" placeholder="Add subcategory..." class="flex-1 border border-gray-300 rounded-lg px-2 py-1" />
+                <button type="button" id="addPhotoSubcategoryBtn" class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs" onclick="addPhotoSubcategoryFromModal()">+ Add Subcategory</button>
+              </div>
+              <div id="photoSubcategoryError" class="text-red-500 text-xs mt-1"></div>
+            </div>
+            <div class="flex justify-end gap-4 mt-8">
+              <button
+                type="button"
+                onclick="closePhotoTemplateModal()"
+                class="px-6 py-2 bg-gray-200 text-gray-700 rounded-lg font-semibold text-lg hover:bg-gray-300 transition"
+              >
+                Cancel
+              </button>
+              <button
+                id="savePhotoTemplateBtn"
+                type="submit"
+                class="px-6 py-2 bg-blue-600 text-white rounded-lg font-semibold text-lg hover:bg-blue-700 transition"
+              >
+                Save Photo Template
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
