--- a/public/index.html
+++ b/public/index.html
@@ -216,6 +216,13 @@
                 ><i class="fa fa-images mr-3"></i>Photo Templates</button
               >
             </li>
+            <li id="nav-photo-packs">
+              <button
+                onclick="switchTab('photo-packs')"
+                class="flex items-center px-3 py-2 rounded-lg text-gray-700 hover:bg-gray-100 w-full text-left"
+                ><i class="fa fa-box-archive mr-3"></i>Photo Packs</button
+              >
+            </li>
             <li>
               <button
                 onclick="switchTab('cartoon-characters')"
@@ -663,6 +670,236 @@
             id="workflowsGrid"
             class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"
           ></div>
+        </div>
+
+        <!-- Photo Packs Tab -->
+        <div id="tab-photo-packs" class="tab-content w-full px-10 py-6 hidden">
+          <div class="flex items-center justify-between mb-4">
+            <h2 class="text-2xl font-bold text-gray-800">Photo Packs</h2>
+            <div class="flex gap-2">
+              <input
+                id="photoPackSearch"
+                type="text"
+                placeholder="Search photo packs..."
+                class="border border-gray-300 rounded-lg px-3 py-2 w-64 focus:outline-none focus:ring-2 focus:ring-pink-400"
+              />
+              <button
+                id="addPhotoPackBtn"
+                onclick="openPhotoPackCrudModal()"
+                class="ml-2 px-4 py-2 bg-pink-600 text-white rounded-lg hover:bg-pink-700 flex items-center"
+              >
+                <i class="fa fa-plus mr-2"></i>Add Photo Pack
+              </button>
+            </div>
+          </div>
+          <div
+            id="photoPacksGrid"
+            class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
+          ></div>
+        </div>
+
+        <!-- Photo Pack Detail Page (hidden by default) -->
+        <div
+          id="photoPackDetailPage"
+          class="hidden w-full h-full px-10 py-8 bg-gray-50 overflow-auto"
+        >
+          <div class="max-w-5xl mx-auto bg-white rounded-xl shadow p-8">
+            <div class="flex justify-between items-center mb-6">
+              <div class="flex items-center gap-3">
+                <button onclick="closePhotoPackDetailPage()" class="text-gray-400 hover:text-gray-700 text-xl">
+                  <i class="fa fa-arrow-left"></i>
+                </button>
+                <span id="photoPackDetailEmoji" class="text-3xl"></span>
+                <h2 id="photoPackDetailTitle" class="text-2xl font-bold"></h2>
+              </div>
+              <div class="flex gap-2">
+                <button
+                  id="editPhotoPackBtn"
+                  onclick="editCurrentPhotoPack()"
+                  class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700"
+                >
+                  <i class="fa fa-edit mr-2"></i>Edit
+                </button>
+                <button
+                  id="deletePhotoPackBtn"
+                  onclick="deleteCurrentPhotoPack()"
+                  class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700"
+                >
+                  <i class="fa fa-trash mr-2"></i>Delete
+                </button>
+              </div>
+            </div>
+            <p id="photoPackDetailDescription" class="text-gray-600 mb-4"></p>
+            <div class="flex items-center gap-4 mb-6 text-sm text-gray-500">
+              <span id="photoPackDetailCount" class="bg-pink-100 text-pink-700 px-3 py-1 rounded-full"></span>
+            </div>
+            
+            <!-- Generation Options Section -->
+            <div class="mb-8 bg-gradient-to-br from-pink-50 to-purple-50 rounded-xl p-6 border border-pink-100">
+              <h3 class="text-lg font-semibold text-gray-800 mb-4 flex items-center gap-2">
+                <i class="fa fa-wand-magic-sparkles text-pink-600"></i>
+                Generate Images
+              </h3>
+              <div class="grid grid-cols-1 md:grid-cols-4 gap-4">
+                <div>
+                  <label class="block text-sm font-medium text-gray-700 mb-2">AI Model</label>
+                  <select id="photoPackModelSelect" class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400 bg-white">
+                    <!-- Options populated by JS -->
+                  </select>
+                </div>
+                <div>
+                  <label class="block text-sm font-medium text-gray-700 mb-2">Number of Images</label>
+                  <div class="flex items-center gap-2">
+                    <input 
+                      type="number" 
+                      id="photoPackImageCount" 
+                      min="1" 
+                      max="20" 
+                      value="5" 
+                      class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
+                    />
+                    <span id="photoPackMaxCount" class="text-sm text-gray-500 whitespace-nowrap">/ 15 max</span>
+                  </div>
+                </div>
+                <div>
+                  <label class="block text-sm font-medium text-gray-700 mb-2">Reference Image (optional)</label>
+                  <div class="flex items-center gap-2">
+                    <label class="flex-1 cursor-pointer">
+                      <input type="file" id="photoPackReferenceImage" accept="image/*" class="hidden" onchange="handlePhotoPackImageUpload(this)" />
+                      <div id="photoPackImagePreviewContainer" class="border border-gray-300 rounded-lg px-3 py-2 bg-white hover:bg-gray-50 flex items-center justify-center text-sm text-gray-500 h-10">
+                        <span id="photoPackImageLabel"><i class="fa fa-upload mr-2"></i>Choose image</span>
+                      </div>
+                    </label>
+                    <button type="button" id="photoPackClearImageBtn" onclick="clearPhotoPackReferenceImage()" class="hidden px-2 py-2 bg-red-100 text-red-600 rounded-lg hover:bg-red-200">
+                      <i class="fa fa-times"></i>
+                    </button>
+                  </div>
+                  <img id="photoPackImagePreview" src="" alt="Preview" class="hidden mt-2 w-full h-20 object-cover rounded-lg" />
+                </div>
+                <div class="flex items-end">
+                  <button
+                    id="generatePhotoPackBtn"
+                    onclick="generatePhotoPackImages()"
+                    class="w-full px-4 py-2 bg-pink-600 text-white rounded-lg hover:bg-pink-700 flex items-center justify-center"
+                  >
+                    <i class="fa fa-wand-magic-sparkles mr-2"></i>Generate
+                  </button>
+                </div>
+              </div>
+              <p id="photoPackGenerationStatus" class="text-sm text-gray-500 mt-3 hidden"></p>
+            </div>
+
+            <!-- Prompts Section -->
+            <div class="mb-8">
+              <h3 class="text-lg font-semibold text-gray-800 mb-3">Prompts</h3>
+              <div id="photoPackDetailPrompts" class="space-y-2"></div>
+            </div>
+
+            <!-- Images Grid -->
+            <div>
+              <h3 class="text-lg font-semibold text-gray-800 mb-3">Generated Images</h3>
+              <div id="photoPackDetailImages" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Photo Pack CRUD Modal -->
+        <div
+          id="photoPackCrudModal"
+          class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-40 hidden"
+        >
+          <div class="bg-white rounded-xl shadow-lg w-full max-w-lg p-6 relative max-h-[90vh] overflow-auto">
+            <button
+              onclick="closePhotoPackCrudModal()"
+              class="absolute top-4 right-4 text-gray-400 hover:text-gray-700 text-xl"
+            >
+              <i class="fa fa-times"></i>
+            </button>
+            <h2 id="photoPackCrudModalTitle" class="text-xl font-bold mb-4">Create Photo Pack</h2>
+            <form id="photoPackCrudForm" class="space-y-4">
+              <input type="hidden" id="photoPackCrudId" value="" />
+              
+              <div class="flex gap-4">
+                <div class="flex-1">
+                  <label class="block text-gray-700 font-semibold mb-1">Name</label>
+                  <input
+                    id="photoPackCrudName"
+                    type="text"
+                    class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
+                    placeholder="Baby Bliss"
+                    required
+                  />
+                </div>
+                <div class="w-24">
+                  <label class="block text-gray-700 font-semibold mb-1">Emoji</label>
+                  <input
+                    id="photoPackCrudEmoji"
+                    type="text"
+                    class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400 text-center text-2xl"
+                    placeholder="📸"
+                    maxlength="4"
+                  />
+                </div>
+              </div>
+
+              <div>
+                <label class="block text-gray-700 font-semibold mb-1">Description</label>
+                <textarea
+                  id="photoPackCrudDescription"
+                  class="w-full border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
+                  rows="2"
+                  placeholder="Beautiful maternity and baby-themed photos..."
+                ></textarea>
+              </div>
+
+              <div>
+                <label class="block text-gray-700 font-semibold mb-1">Photo Count (10-20)</label>
+                <input
+                  id="photoPackCrudPhotoCount"
+                  type="range"
+                  min="10"
+                  max="20"
+                  value="15"
+                  class="w-full accent-pink-600"
+                />
+                <div class="text-center text-pink-600 font-semibold">
+                  <span id="photoPackPhotoCountDisplay">15</span> photos
+                </div>
+              </div>
+
+              <div>
+                <label class="block text-gray-700 font-semibold mb-2">Prompts</label>
+                <div id="photoPackCrudPrompts" class="space-y-2 max-h-40 overflow-auto">
+                  <div class="prompt-row flex gap-2">
+                    <input type="text" class="prompt-input flex-1 border border-gray-300 rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400" placeholder="Enter a prompt..." />
+                    <button type="button" onclick="removePhotoPackPromptRow(this)" class="px-3 py-2 bg-red-100 text-red-600 rounded-lg hover:bg-red-200">
+                      <i class="fa fa-trash"></i>
+                    </button>
+                  </div>
+                </div>
+                <button type="button" onclick="addPhotoPackPromptRow()" class="mt-2 px-4 py-2 bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 w-full">
+                  <i class="fa fa-plus mr-2"></i>Add Prompt
+                </button>
+              </div>
+
+              <div class="flex justify-end gap-2 pt-4">
+                <button
+                  type="button"
+                  onclick="closePhotoPackCrudModal()"
+                  class="px-4 py-2 bg-gray-200 text-gray-700 rounded-lg"
+                >
+                  Cancel
+                </button>
+                <button
+                  id="photoPackCrudSaveBtn"
+                  type="submit"
+                  class="px-4 py-2 bg-pink-600 text-white rounded-lg hover:bg-pink-700"
+                >
+                  Save
+                </button>
+              </div>
+            </form>
+          </div>
         </div>
 
         <!-- Cartoon Characters Tab -->
