--- a/public/index.html
+++ b/public/index.html
@@ -1496,6 +1496,7 @@
                   <option value="kling-2.5-turbo-pro-image-to-video">Kling 2.5 Turbo Pro Image2Video</option>
                   <option value="kling-2.5-turbo-pro">Kling 2.5 Turbo Pro Text2Video</option>
                   <option value="wan-2.5-image-to-video">Wan 2.5 Image2Video</option>
+                  <option value="wan-v2-6-image-to-video-flash">Wan 2.6 Flash Image2Video</option>
                 </select>
                 <!-- Pixverse last frame uploader (hidden unless Pixverse model chosen) -->
                 <div id="featureLastFrameWrapper" style="display:none" class="flex items-center gap-2">
