add loaders for sub admin

--- a/public/index.html
+++ b/public/index.html
@@ -710,6 +710,7 @@
           <div class="flex items-center justify-between mb-4">
             <h2 class="text-2xl font-bold text-gray-800">Sub-Admin Management</h2>
             <button
+              id="createSubAdminBtn"
               onclick="openSubAdminModal()"
               class="px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 flex items-center"
             >
